--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -220,7 +220,7 @@
 			<dependency>
 				<groupId>org.apfloat</groupId>
 				<artifactId>apfloat</artifactId>
-				<version>1.15.0</version>
+				<version>1.16.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.janino</groupId>
